--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.7",
-    "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-iframe": "^1.8.0",
     "react-scripts": "3.1.2",
     "typescript": "3.6.3"
   },
@@ -32,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.3"
   }
 }
