--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "podderud",
   "version": "0.1.0",
+  "homepage": "https://collatty.github.io/podderud",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.7",
     "@types/react-dom": "16.9.1",
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
@@ -18,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
